--- a/pkgs/clan-app/ui/src/index.css
+++ b/pkgs/clan-app/ui/src/index.css
@@ -24,6 +24,12 @@
   src: url(../.fonts/ArchivoSemiCondensed-SemiBold.woff2) format("woff2");
 }
 
+@font-face {
+  font-family: "VT323";
+  font-weight: normal;
+  src: url("../.fonts/VT323-Regular.ttf") format("ttf");
+}
+
 @keyframes slide {
   to {
     background-position: 200% 0;
