--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/Sidebar.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/Sidebar.css
@@ -1,14 +1,6 @@
 div.sidebar {
-  @apply rounded-lg h-auto w-auto max-w-60 border-none;
-  @apply backdrop-blur-sm;
+  @apply h-auto w-auto max-w-60 border-none;
 
-  background:
-    url(./lightgray.png) 0 0 / 36px 36px repeat,
-    linear-gradient(
-      180deg,
-      theme(colors.primary.800) 0%,
-      theme(colors.primary.900) 100%
-    );
 
   & > div.header {
   }
