--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
@@ -13,14 +13,14 @@ div.sidebar-body {
 
         & > .item {
 
-            @apply px-3 py-1.5 bg-inv-3 rounded-md mb-4;
+            @apply py-3 px-1.5 bg-inv-3 rounded-md mb-4;
 
             &:last-child {
                 @apply mb-0;
             }
 
             & > .header {
-                @apply flex mb-4;
+                @apply flex mb-4 px-2;
 
                 & > .trigger {
                     @apply inline-flex items-center justify-between w-full;
@@ -46,6 +46,11 @@ div.sidebar-body {
 
                 nav > a {
                     @apply block w-full px-2 py-1.5 min-h-7;
+
+                    &:hover {
+                        @apply rounded-sm;
+                        background: linear-gradient(90deg, theme(colors.secondary.900) 0%, theme(colors.primary.600) 100%);
+                    }
                 }
             }
         }
