--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
@@ -1,13 +1,16 @@
 div.sidebar-body {
-    @apply pt-4 pb-3 px-2 h-full;
+    @apply py-4 px-2 h-full;
     @apply border border-inv-3 rounded-bl-md rounded-br-md;
 
-    background:
-            linear-gradient(180deg, theme(colors.primary.600) 0%, theme(colors.primary.700) 100%);
+    background: linear-gradient(180deg, theme(colors.primary.600) 0%, theme(colors.primary.700) 100%);
     backdrop-filter: blur(4px);
 
     .accordion {
-        @apply w-full;
+        @apply w-full mb-4;
+
+        &:last-child {
+            @apply mb-0;
+        }
 
         & > .item {
 
@@ -54,7 +57,7 @@ div.sidebar-body {
         }
 
 
-
-
     }
+
+
 }
