--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
@@ -46,7 +46,7 @@ div.sidebar-body {
                 @apply overflow-hidden flex flex-col;
 
                 nav > a {
-                    @apply block w-full px-2 py-1.5 min-h-7;
+                    @apply block w-full px-2 py-1.5 min-h-7 my-2;
 
                     &:hover {
                         @apply rounded-sm;
