--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
@@ -16,10 +16,6 @@ div.sidebar-body {
 
             @apply py-3 px-1.5 bg-inv-3 rounded-md mb-4;
 
-            &:last-child {
-                @apply mb-0;
-            }
-
             & > .header {
                 @apply flex mb-4 px-2;
 
@@ -45,12 +41,35 @@ div.sidebar-body {
             & > .content {
                 @apply overflow-hidden flex flex-col;
 
+                nav * {
+                    @apply outline-none;
+                }
+
                 nav > a {
-                    @apply block w-full px-2 py-1.5 min-h-7 my-2;
+                    @apply block w-full px-2 py-1.5 min-h-7 my-2 rounded-md;
+
+                    &:first-child {
+                        @apply mt-0;
+                    }
+
+                    &:last-child {
+                        @apply mb-0;
+                    }
+
+                    &:focus-visible {
+                        background: linear-gradient(90deg, theme(colors.secondary.900), 60%, theme(colors.secondary.600) 100%);
+                    }
 
                     &:hover {
-                        @apply rounded-sm;
-                        background: linear-gradient(90deg, theme(colors.secondary.900) 0%, theme(colors.primary.600) 100%);
+                        @apply bg-inv-acc-2;
+                    }
+
+                    &:active {
+                        @apply bg-inv-acc-4;
+                    }
+
+                    &.active {
+                        @apply bg-inv-acc-2;
                     }
                 }
             }
