--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarBody.css
@@ -35,6 +35,10 @@ div.sidebar-body {
                     &[data-expanded] > .icon {
                         transform: rotate(180deg);
                     }
+
+                    .section-title {
+                        @apply uppercase;
+                    }
                 }
             }
 
