--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNav.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNav.css
@@ -1,6 +1,5 @@
 div.sidebar {
-  @apply h-auto w-auto max-w-60 border-none;
-
+  @apply h-full w-auto max-w-60 border-none;
 
   & > div.header {
   }
