--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNavHeader.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNavHeader.css
@@ -19,6 +19,10 @@ div.sidebar-header {
 
         div.title {
             @apply flex items-center gap-2 justify-start;
+
+            & > .clan-icon {
+                @apply rounded-full bg-inv-4 w-6 h-6;
+            }
         }
 
         .icon[data-icon-name="CaretDown"] {
