--- a/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNavHeader.css
+++ b/pkgs/clan-app/ui/src/components/v2/Sidebar/SidebarNavHeader.css
@@ -29,16 +29,6 @@ div.sidebar-header {
             transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
         }
 
-        /*&[data-expanded] {*/
-        /*    .inner {*/
-        /*        @apply bg-def-1;*/
-
-        /*        .icon[data-icon-name="CaretDown"] {*/
-        /*            transform: rotate(180deg);*/
-        /*        }*/
-        /*    }*/
-        /*}*/
-
         &[data-expanded] {
 
             @apply bg-def-1;
@@ -57,10 +47,30 @@ div.sidebar-header {
 
 .sidebar-dropdown-content {
 
-    @apply flex flex-col w-full px-2 py-1.5 gap-1.5;
+    @apply flex flex-col w-full px-2 py-1.5;
     @apply bg-def-1 rounded-bl-md rounded-br-md;
     @apply border border-def-2;
 
+    .dropdown-item {
+        @apply flex items-center justify-start w-full p-1.5 gap-2 rounded;
+
+        &:hover {
+            @apply bg-def-acc-2 cursor-pointer;
+        }
+    }
+
+    .dropdown-group {
+
+        @apply flex flex-col gap-2;
+        @apply px-1;
+
+        .dropdown-group-label {}
+
+        .dropdown-group-items {
+            @apply rounded px-1 py-1.5 bg-def-2;
+        }
+
+    }
 
 }
 
